--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ app.version=0.7.0
 app.api.version=v1
 server.port=8080
 
+## Ajustamos la configuracion de Actuator
+management.server.port=8081
+management.endpoints.web.exposure.include=*
+
 # Configuracion de la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/curso_springboot
 spring.datasource.username=sebasdb
